# page-to-alto

./: .dockerignore  .gitignore  .gitmodules  CHANGELOG.md  Dockerfile  Makefile  README.md  ocrd-tool.json  page-to-alto.xsl  pyproject.toml  requirements.dev.txt  requirements.txt  setup.py
.circleci/: config.yml
.github/workflows/: cd-docker.yml
ocrd_page_to_alto/: cli.py  convert.py  ocrd-tool.json  ocrd_cli.py  ocrd_processor.py  styles.py  utils.py
src/: convert.py  ocrd-tool.json  ocrd_processor.py  utils.py
src/ocrd_page_to_alto/: cli.py  convert.py  ocrd-tool.json  ocrd_processor.py  styles.py
tests/: test_convert.py  test_styles.py
tests/data/: FILE_0010_OCR-D-OCR-CALAMARI.xml  OCR-D-OCR-CALAMARI_00001.xml  OCR-D-OCR-TESS_00001.xml  PPN860789411-00000001.page.xml  align.page.xml  blank.page.xml  content-no-words.page.xml  empty-lines.page.xml  language.page.xml  layouttag.page.xml  region_no_line.page.xml  sp-hyp.page.xml  timestamp.page.xml
